test/valid/56307_powerFunction/powerFunction.agu
-- Author: 56307, Denis Ungureanu
let main(_) : Unit -> Unit =
  print(2 ^ 3 ^ 2)
