test/invalid-semantic/56307_typeMismatch/typeMismatch.agu
-- Author: 56307, Denis Ungureanu, Semantic Test 2
let wrongType : Int = "hello"